Add additional response codes to endpoint.api. DAT-2879
