# api_server/openapi_server/openapi/openapi.yaml
@@ -234,6 +234,19 @@ paths:
                 $ref: '#/components/schemas/EngineersList'
           description: |
             Successful response Returns an array of engineers with info
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: There is an error with the data posted, for instance, the engineer
+            id specified is not an integer
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: No engineer was found for the specified id.
       security:
       - OAuth2AzureAD:
         - snbplanningapi.planner
@@ -368,6 +381,14 @@ paths:
               schema:
                 default: private, max-age=300
                 type: string
+              style: simple
+            "404":
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/Error'
+              description: Workitem not found.
+              explode: false
               style: simple
       security:
       - OAuth2AzureAD:
